exports[`components <MovieDetails /> renders correctly 1`] = `
<div
  className="fullPage">
  <div
    className="movieContainer" />
</div>
`;

exports[`components <MovieOverviewPlaying /> renders correctly 1`] = `
<div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Movies Now Playing
    </h1>
    <div
      id="search-bar-wrapper">
      <input
        onChange={[Function]}
        placeholder="Search Movies"
        type="text" />
    </div>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <MovieOverviewPopular /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Popular Movies
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <MovieOverviewToprated /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Top Rated Movies
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <MovieOverviewUpcoming /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Upcoming Movies this month
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <SearchBar /> renders correctly 1`] = `
<div
  id="search-bar-wrapper">
  <input
    onChange={[Function]}
    placeholder="Search Movies"
    type="text" />
</div>
`;

exports[`components <SearchBarTv /> renders correctly 1`] = `
<div
  id="search-bar-wrapper">
  <input
    onChange={[Function]}
    placeholder="Search Tv"
    type="text" />
</div>
`;

exports[`components <TvDetails /> renders correctly 1`] = `
<div
  className="fullPage">
  <div
    className="movieContainer" />
</div>
`;

exports[`components <TvOverviewPlaying /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      TV series Airing today
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <TvOverviewPopular /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Popular TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <TvOverviewToprated /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Top Rated TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`components <TvOverviewUpcoming /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Upcoming TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;
